k8s/apps/base/frontend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app
  namespace: asrp
  annotations:
    nginx.ingress.kubernetes.io/use-http2: "false"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - app.localtest.me
      secretName: asrp-tls
  rules:
    - host: app.localtest.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 8080
